# proxmoxbmc

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
proxmoxbmc/: __init__.py  config.py  control.py  exception.py  log.py  manager.py  pbmc.py  utils.py
proxmoxbmc/cmd/: pbmc.py  pbmcd.py
