[metadata]
name = proxmoxbmc
summary = Create virtual BMCs for controlling virtual instances via IPMI in Proxmox VE. Based on VirtualBMC https://github.com/openstack/virtualbmc.
version = 2.2.2
description_file = README.md
author = Marcus Nordenberg
author_email = marcus.nordenberg@gmail.com
python_requires = >=3.6
classifier =
    Environment :: Proxmox
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    proxmoxbmc

[entry_points]
console_scripts =
    pbmc = proxmoxbmc.cmd.pbmc:main
    pbmcd = proxmoxbmc.cmd.pbmcd:main

proxmoxbmc =
    add = proxmoxbmc.cmd.pbmc:AddCommand
    delete = proxmoxbmc.cmd.pbmc:DeleteCommand
    start = proxmoxbmc.cmd.pbmc:StartCommand
    stop = proxmoxbmc.cmd.pbmc:StopCommand
    list = proxmoxbmc.cmd.pbmc:ListCommand
    show = proxmoxbmc.cmd.pbmc:ShowCommand

# [options]
# package_dir=
#     =proxmoxbmc
# packages=find:

# [options.packages.find]
# where=proxmoxbmc